Creating a Web Application with Spring Boot

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,3 +8,13 @@
         <li>{{name}}</li>
     {{/videos}}
 </ul>
+
+<form action="/new-video" method="post">
+    <input type="text" name="name">
+    <button type="submit"> Submit</button>
+</form>
+<h1>Stupid jackson</h1>
+<form action="/api/videos" method="post">
+    <input type="text" name="name">
+    <button type="submit"> Submit</button>
+</form>
